# download-car

./: .config.env  .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  COLAB_README.md  DATABASE.md  DOCKER_OPTIMIZATION.md  DOWNLOAD_STATE_FIX.md  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.dev  Dockerfile.download-car  Dockerfile.nginx  Dockerfile.pro  MAKEFILE_ENV_UPDATE.md  Makefile  NGINX_FIX_SUMMARY.md  README-ENV.md  README.md  README_INTERFACE.md  README_NEW_FEATURES.md  RESTORE_SUMMARY.md  add_file_path_comments.py  api.py  api.sh  app.py  cli.py  colab.ipynb  config.env  create_realistic_flags.sh  database.py  docker-compose.yml  download_flags.sh  download_state.py  download_state.sh  entrypoint.api.sh  entrypoint.download.sh  entrypoint.nginx.sh  (+9 more)
.cursor/rules/: api.mdc  core.mdc  database.mdc  docker.mdc  env.mdc  git.mdc  install.mdc  sicar.mdc  specs.mdc  utils.mdc
SICAR/: sicar.py
SICAR/tests/unit/: sicar.py
assets/: README.md
dev/: api.sh  cli.sh  download_all_states.sh  download_failed_states.sh  download_state.sh  download_states.sh  fix_permissions.sh  start-tor.sh  test_delete_state.py  test_docker_optimization.sh  verify_features.sh  verify_property.py  vpn_manager.py
download_car/: sicar.py
download_car/drivers/: __init__.py  paddle.py
download_car/tests/integration/: sicar.py
download_car/tests/unit/: sicar.py
examples/: download_state.py
nginx/: nginx.conf
scripts/: bump_version.py  download_ibge_flags.py
