# pyproject.toml
[project]
name = "download-car"
version = "1.0.2"
authors = [{ name = "Ricardo Malnati", email = "ricardomalnati@gmail.com" }]
description = "download-car - Tool designed for students, researchers, data scientists or anyone who would like to have access to download-car files."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pyproject", "api", "cli", "html", "nginx", "python", "tesseract", "sicar", "mapbiomas", "docker", "docker-compose", "black", "tests", "cursor"]
dependencies = [
    "httpx>=0.28.1",
    "urllib3>=2.3.0",
    "pytesseract>=0.3.13",
    "opencv-python>=4.11.0.86",
    "numpy>=2.0.2",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.0",
    "beautifulsoup4>=4.13.4",
    "geopandas>=0.14.0",
    "fiona>=1.9.0",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "requests>=2.31.0",
    "pysocks>=1.7.1"
]

[project.optional-dependencies]
paddle = ["paddlepaddle>=3.0.0", "paddleocr>=2.10.0"]
dev = ["coverage", "interrogate", "black", "coveralls"]
full = ["paddlepaddle>=3.0.0", "paddleocr>=2.10.0", "coverage", "interrogate", "black", "coveralls"]

[project.urls]
"Homepage" = "https://github.com/Malnati/download-car"
"Bug Tracker" = "https://github.com/Malnati/download-car/issues"

[tool.setuptools]
packages = ["download_car", "download_car.drivers"]

[tool.interrogate]
exclude = ["download_car/tests*"]
verbose = 2
generate-badge = ".github"

[tool.coverage.run]
source = ["download_car"]
omit = ["download_car/tests/integration/*"]

[tool.coverage.report]
show_missing = true
ignore_errors = false
fail_under = 100
exclude_lines = ["except ImportError:"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
